--- a/apps.html
+++ b/apps.html
@@ -9,15 +9,13 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
-     crossorigin="anonymous"></script>
     </head>
 
     <body>
         <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://kingdomappsolutions.tech">
-                    <img src="./images/website.logo.png">
+                    <img src="./images/website.logo.png" alt="Logo">
                 </a>
         
                 <a role="button" class="navbar-burger is-dark" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -104,7 +102,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Mobile app development is one of the primary products Kingdom Application Solutions LLC offers. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our apps seek to provide answers to problems our users face whether it be technical issues, health related, or church/ministry related.
+                    Mobile app development is one of the primary services Kingdom Application Solutions LLC offers. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our apps seek to provide answers to problems our users face whether it be technical issues, health related, or organizationally related.
                 </h2><br>
                 <h1 class="title">
                     Current Products
@@ -184,7 +182,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom mobile app for your business, church/ministry, or personally can enable you to effectively communicate with your target area, niche, or church. Listed below are the custom app packages Kingdom Application Solutions LLC offers to get your organizational or individual app up and running and deployed to both app stores. Contact us through the contact page if you are interested in custom app development.
+                    A custom mobile app for your organization can enable you to effectively communicate with your target area, niche, or within your organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
                 </h2><br>
                 <div class="columns">
                     <div class="column">
@@ -198,12 +196,13 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3>$2,500 to develop for both Android and Apple</h3>
+                                    <h3>$1,000 initial deposit</h3>
+                                    <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
-                                    <h3>Simple app consisting of up to three (3) pages with tab navigation</h3>
-                                    <h3>One major feature integration</h3>
-                                    <h3>$100 per platform per feature for 1 additional feature</h3>
-                                    <h3>$100 per month for app updates (billed annually) to publish updated content</h3>
+                                    <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
+                                    <h3>One (1) major feature integration</h3>
+                                    <h3>$100 per platform per feature for <br> one (1) additional feature</h3>
+                                    <h3>Periodic updates made as needed <br> to publish updated content</h3>
                                 </div>
                             </div>
                         </div>
@@ -220,12 +219,13 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3>$5,000 to develop for both Android and Apple</h3>
+                                    <h3>$1,500 initial deposit</h3>
+                                    <h3><b>$300 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
-                                    <h3>Up to ten (10) pages with option for side menu navigation as well as tabs</h3>
-                                    <h3>Up to 3 major features integrations</h3>
-                                    <h3>$100 per platform per feature for up to 2 additional features</h3>
-                                    <h3>$150 per month for app updates (billed annually) to publish updated content</h3>
+                                    <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
+                                    <h3>Up to three (3) major features integrations</h3>
+                                    <h3>$100 per platform per feature for up to <br> two (2) additional features</h3>
+                                    <h3>Periodic updates made as needed <br> to publish updated content</h3>
                                 </div>
                             </div>
                         </div>
@@ -242,12 +242,13 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3>$10,000 to develop for both Android and Apple</h3>
+                                    <h3>$2,000 initial deposit</h3>
+                                    <h3><b>$500 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
-                                    <h3>More than ten (10) pages with any navigation option</h3>
-                                    <h3>Up to 6 major feature integrations</h3>
-                                    <h3>$100 per platform per feature for additional features</h3>
-                                    <h3>$200 per month for app updates (billed annually) platform to publish updated content.</h3>
+                                    <h3>More than ten (10) pages with <br> any navigation option</h3>
+                                    <h3>Up to six (6) major feature integrations</h3>
+                                    <h3>$100 per platform per feature <br> for additional features</h3>
+                                    <h3>Periodic updates made as needed <br> to publish updated content.</h3>
                                 </div>
                             </div>
                         </div>
