--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
-     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -145,7 +143,7 @@
                         </h2>
                         <h4 class="subtitle">
                             We offer mobile app solutions that solve problems and try to make life easier. These apps cover a wide range of genres including tech, church/ministry, and health. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store. <br><br>
-                            Along with our own apps, we also offer the creation of custom mobile apps for individuals or businesses. Check the button below for pricing information.
+                            Along with our own apps, we also offer the creation of custom mobile apps for organizations. Check the button below for pricing information.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>Learn More</b>
@@ -163,7 +161,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle">
-                            We offer the design and development of custom websites for anyone interested in having a quality-made website. We also offer the creation of websites through popular content manangement options. Along with design and development, we offer the maintenance and updating either of a site we created or one you created through a yearly subscription service.
+                            We offer the design and development of custom websites for anyone interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
                             <b>Learn More</b>
