--- a/websites.html
+++ b/websites.html
@@ -9,15 +9,13 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
-     crossorigin="anonymous"></script>
     </head>
 
     <body>
         <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://kingdomappsolutions.tech">
-                    <img src="./images/website.logo.png">
+                    <img src="./images/website.logo.png" alt="Logo">
                 </a>
         
                 <a role="button" class="navbar-burger is-dark" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -104,11 +102,11 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with mobile apps, website development is one of the primary products Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out an organization so it is a vital piece of any organization's marketing plan. Websites should look nice not only on a computer, but also on mobile phones. A well-made website illustrates to others that you take their business seriously.
-                </h2><br>
+                    Along with mobile apps, website development is one of the primary services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out an organization so it is a vital piece of any organization's marketing plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for an organization's web presence. A well-made website illustrates to others that you take their business seriously.
+                </h2>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom website for your organization can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a content management system (CMS) such as Weebly or a more custom website. Contact us through the contact page if your are interested in website development for your organization.
+                    A custom website for your organization can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
                 </h2><br>
                 <h1 class="title">
                     Pricing
@@ -124,10 +122,10 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation and quote!</h3>
-                                    <h3>$1,000 minimum including domain setup and hosting fees for one year</h3>
-                                    <h3>$200 per page including graphics design</h3>
-                                    <h3>Optional $100 per month (billed annually) for website updates</h3>
+                                    <h3>Free initial consultation!</h3>
+                                    <h3>$125 monthly service which includes: <br><br> <b>Website Development, Graphic Design, <br> and Periodic Updates</b></h3>
+                                    <h3>$300 initial deposit which includes domain setup and hosting fees for one year</h3>
+                                    <h3>$200 final payment upon deployment of site</h3>
                                 </div>
                             </div>
                         </div>
@@ -143,10 +141,10 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>Free initial consultation and quote!</h3>
-                                    <h3>$2,000 minimum including domain setup and hosting fees for one year</h3>
-                                    <h3>$400 per page for graphics design and site development</h3>
-                                    <h3>$200 per month for website updates (billed annually)</h3>
+                                    <h3>Free initial consultation!</h3>
+                                    <h3>$200 monthly service which includes: <br><br> <b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, and Periodic Updates</b></h3>
+                                    <h3>$500 initial deposit which includes domain setup and hosting fees for one year</h3>
+                                    <h3>$500 final payment upon deployment of site</h3>
                                 </div>
                             </div>
                         </div>
