--- a/products-services.html
+++ b/products-services.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
-     crossorigin="anonymous"></script> -->
     </head>
 
     <body>
@@ -104,7 +102,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development both for the company and for organizations and individuals, and website design and development for organizations and individuals. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
+                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application product development as well as custom mobile app development for organizations, and website design and development for organizations and individuals. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
@@ -137,7 +135,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    We offer the design and development of custom websites for organizations and individuals. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs. <br><br> We also offer the creation of websites through popular content manangement options such as WordPress or Weebly (Square) if that fits your needs better for easy updating. Click <u><a href="https://kingdomappsolutions.tech/websites.html">here</a></u> for information about website development pricing for both custom and content management systems.<br>
+                                    We offer the design and development of custom websites for organizations and individuals. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click <u><a href="https://kingdomappsolutions.tech/websites.html">here</a></u> for information about website development pricing for both custom and content management systems.<br>
                                 </div>
                             </div>
                         </div>
