--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle">
-                            We offer mobile app solutions that solve problems and try to make life easier. These apps cover a wide range of genres including tech, church/ministry, and health. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store. <br><br>
-                            Along with our own apps, we also offer the creation of custom mobile apps for organizations. Check the button below for pricing information.
+                            We offer mobile app development for small business and organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that solve problems, try to make life easier, and provide entertainment. These apps cover a wide range of genres including tech, church/ministry, health, and games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>Learn More</b>
