--- a/products-services.html
+++ b/products-services.html
@@ -102,7 +102,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application product development as well as custom mobile app development for organizations, and website design and development for organizations and individuals. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
+                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development and website design and development for organizations and individuals. We also produce our own line of mobile apps deployed to the app stores. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
@@ -115,7 +115,9 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    We offer mobile apps that provide solutions to common problems as well as custom app development for organizations and individuals to use day-to-day in their lives. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store. <br><br> Several apps are in production and one has already been published on the app stores. Click <u><a href="https://kingdomappsolutions.tech/apps.html">here</a></u> to see more information about the types of mobile apps we offer as well as pricing information for custom mobile app development packages we offer. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
+                                    We offer mobile app development for organizations and businesses that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring mobile app development to small businesses and organizations at an affordable price.
+                                    
+                                    Click <u><a href="https://kingdomappsolutions.tech/apps.html">here</a></u> to see more information about pricing for custom mobile app development. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
                                 </div>
                             </div>
                             <footer class="card-footer">
