--- a/websites.html
+++ b/websites.html
@@ -92,7 +92,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Custom Websites Built for Your Organization in Mind!
+                        Quality Websites Built for Your Organization in Mind!
                     </h1>
                     <img class="home-image" src="./images/header.png" width="300" alt="Logo">
                 </div>
@@ -106,7 +106,7 @@
                 </h2>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom website for your organization can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
+                    A custom website for your organization can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development service packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
                 </h2><br>
                 <h1 class="title">
                     Pricing
@@ -123,9 +123,10 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$125 monthly service which includes: <br><br> <b>Website Development, Graphic Design, <br> and Periodic Updates</b></h3>
+                                    <h3>$100 monthly service which includes: <br><br> <b>Website Development, Graphic Design, <br> and Periodic Updates</b></h3>
                                     <h3>$300 initial deposit which includes domain setup and hosting fees for one year</h3>
                                     <h3>$200 final payment upon deployment of site</h3>
+                                    <h3>$100 per year for hosting renewal</h3>
                                 </div>
                             </div>
                         </div>
@@ -145,6 +146,7 @@
                                     <h3>$200 monthly service which includes: <br><br> <b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, and Periodic Updates</b></h3>
                                     <h3>$500 initial deposit which includes domain setup and hosting fees for one year</h3>
                                     <h3>$500 final payment upon deployment of site</h3>
+                                    <h3>$100 per year for hosting renewal</h3>
                                 </div>
                             </div>
                         </div>
