--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    We are excited to hear from you and how we can work with you to aid in your software needs! Please fill out the contact form below and we will get back with you as soon as we can!
+                    We are excited to hear from you and how we can work with you to aid in your mobile app development or website development needs! Please fill out the contact form below and we will get back with you as soon as we can!
                 </h2>
             
                 <form id="contactForm" action="mail.php" method="POST">
