--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
                 </div>
             </div>
-        </section><hr>
+        </section>
 
         <!-- <section class="hero section-padding">
             <div class="hero-body">
