Fixed typo in app pricing

--- a/apps.html
+++ b/apps.html
@@ -174,7 +174,7 @@
                                     <h3><b>$400 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>More than ten (10) pages with <br> any navigation option</h3>
-                                    <h3>Up to six (6) major feature integrations</h3>
+                                    <h3>Unlimited feature integrations</h3>
                                     <h3>$200 per feature for unlimited <br> additional features</h3>
                                     <h3>Periodic updates made as needed <br> to publish updated content.</h3>
                                 </div>
